# Genius-project

./: .gitignore  README.md
cricket-ml/: README.md  app.py  requirements.txt
cricket-ml/src/: __init__.py  features.py  generate_sample_data.py  inference.py  predict_scenario.py  train_boundary_model.py
moments-pipeline-sim/: .env.example  README.md  docker-compose.yml
moments-pipeline-sim/apps/api-ts/: package-lock.json  package.json
moments-pipeline-sim/apps/api-ts/src/: index.ts
moments-pipeline-sim/apps/api-ts/src/lib/: db.ts  pulsar.ts
moments-pipeline-sim/apps/api-ts/src/routes/: health.ts  moments.ts
moments-pipeline-sim/apps/api-ts/src/types/: moment.ts
moments-pipeline-sim/apps/consumer-rust/: Cargo.toml
moments-pipeline-sim/apps/consumer-rust/src/: dedupe.rs  main.rs  moment.rs  mysql_repo.rs  scoring.rs
moments-pipeline-sim/apps/producer-ts/: package-lock.json  package.json
moments-pipeline-sim/apps/producer-ts/src/: generateMoments.ts
moments-pipeline-sim/dashboards/queries/: ctr_by_moment_type.sql  dedupe_rate.sql  trigger_latency.sql
moments-pipeline-sim/docs/: architecture.md  backlog.md  event-contract.md
moments-pipeline-sim/libs/event-schema/: moment-event.schema.json  moment-event.zod.ts
moments-pipeline-sim/scripts/: dev-down.sh  dev-up.sh  setup-protoc.sh
moments-pipeline-sim/sql/: 001_init.sql  002_indexes.sql
