[package]
name = "moments-consumer-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
mysql = { version = "24.0.0", default-features = false, features = ["minimal"] }
native-tls = { version = "0.2.11", features = ["vendored"] }
pulsar = { version = "4.1.3", default-features = false, features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "=0.2.9"
tokio = { version = "1.38", features = ["full"] }
uuid = "=1.2.1"
